# EtherCATMaster

./: .gitmodules  CMakeLists.txt  Jenkinsfile  README.md
.github/workflows/: cmake-single-platform.yml
ECM/: CMakeLists.txt
ECM/include/EtherCATMaster/: CIA402Defines.h  CIA402DriveHandler.h  EtherCATMaster.h  IOMapping.h  LenzeI550Defines.h
ECM/src/: EtherCATMaster.cpp
Test/: CMakeLists.txt  main.cpp
